# HashCodePractice

./: .gitignore  .libTest.py.swp  .replit  CMakeLists.txt  DanceFloor.cpp  IceCreamDataSet.csv  IceCreamDataSet.xlsx  README.md  adeptmind.py  adeptmind2.py  code_jam2020_quali_1.py  codeforces643.py  codeforces643q2.py  codeforces643q3.py  codejam1b1.py  codejam1b3.py  create_ordering.py  h.in  h.py  hilbertshotel.py  i.cc  j.py  k.py  kayak2.py  kickstart_1.py  kickstart_2.py  kickstart_3.py  kickstart_4.py  kickstart_5.py  kickstart_6.in  kickstart_6.py  libTest.py  library.py  main  main.cpp  output_excreter.py  p1.py  p2.py  p3.in  p3.py  (+8 more)
.ipynb_checkpoints/: self_driving-checkpoint.ipynb
foobar/: level1.py  level2.py  level2_b.py
hackercup/: CMakeLists.txt  Makefile  alchemy.cpp  hash_code  output.txt  python_impl.py  q1.py  quarantine.cpp  travel_restrictions_input.txt  validation.txt
hackercup/new_bu/: CMakeCache.txt  Makefile  cmake_install.cmake  hackercup
hackercup/quarantine/: go.mod  qmain.go
